src/test/deca/syntax/parser/invalid/decl_var_type_reserved_words_true.deca
// Parser test, type unavailable

{
    true x = 5;
}